[gd_scene load_steps=15 format=2]

[ext_resource path="res://PixulBrush.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/background/teacher homepage bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/biscuit popup.png" type="Texture" id=3]
[ext_resource path="res://Teacher/mytheme.tres" type="Theme" id=4]
[ext_resource path="res://Teacher/Stat/View Stats hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Teacher/Stat/View Stats.tres" type="StyleBox" id=6]
[ext_resource path="res://Teacher/Stat/ViewStatsStudent.gd" type="Script" id=7]
[ext_resource path="res://Teacher/PixulBrush.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 522, 351 )

[sub_resource type="Theme" id=2]
TexturedRect/styles/ = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.522
anchor_right = 0.5
anchor_bottom = 0.522
margin_left = -984.0
margin_top = -547.76
margin_right = 1000.0
margin_bottom = 548.24
rect_pivot_offset = Vector2( 744, 656 )
theme = SubResource( 2 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StudentOptionbutton" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -856.0
margin_top = -428.0
margin_right = -32.0
margin_bottom = -132.0
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Student Name"
align = 1
items = [ "Student Name", null, true, 0, null, "A", null, false, 1, null, "B", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.525
anchor_top = 0.57
anchor_right = 0.525
anchor_bottom = 0.57
margin_left = 368.0
margin_top = -351.6
margin_right = 800.0
margin_bottom = -223.6
theme = ExtResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewLevel" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 416.0
margin_top = -420.0
margin_right = 848.0
margin_bottom = -292.0
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Level -"
align = 1
items = [ "Level -", null, true, 0, null, "Level 1", null, false, 1, null, "Level 2", null, false, 2, null, "Level 3", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewClass" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -276.0
margin_right = 400.0
margin_bottom = -148.0
rect_pivot_offset = Vector2( 264, 24 )
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Class -"
align = 1
items = [ "Class -", null, true, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewTower" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -420.0
margin_right = 400.0
margin_bottom = -292.0
rect_pivot_offset = Vector2( 264, 24 )
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Tower -"
align = 1
items = [ "Tower -", null, true, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel2" type="Label" parent="."]
margin_left = 1378.0
margin_top = 426.0
margin_right = 1754.0
margin_bottom = 478.0
rect_pivot_offset = Vector2( -1360, -240 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Avg. Time Taken"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel2" type="Label" parent="."]
margin_left = 968.0
margin_top = 424.0
margin_right = 1212.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( -1360, -240 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Avg. Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel2" type="Label" parent="."]
margin_left = 555.0
margin_top = 427.0
margin_right = 795.0
margin_bottom = 479.0
rect_pivot_offset = Vector2( -856, -184 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Max Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StudentLabel2" type="Label" parent="."]
margin_left = 149.0
margin_top = 426.0
margin_right = 389.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Student"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvgLabel2" type="Label" parent="."]
margin_left = 147.0
margin_top = 896.0
margin_right = 347.0
margin_bottom = 948.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Average"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvgLevelLabel" type="Label" parent="AvgLabel2"]
margin_left = 408.0
margin_right = 632.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="AvgScoreLabel" type="Label" parent="AvgLabel2"]
margin_left = 816.0
margin_right = 1064.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="AvgTimeLabel" type="Label" parent="AvgLabel2"]
margin_left = 1224.0
margin_right = 1456.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[connection signal="item_selected" from="StudentOptionbutton" to="." method="_on_StudentOptionbutton_item_selected"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="item_selected" from="ViewLevel" to="." method="_on_ViewLevel_item_selected"]
[connection signal="item_selected" from="ViewClass" to="." method="_on_ViewClass_item_selected"]
[connection signal="item_selected" from="ViewTower" to="." method="_on_ViewTower_item_selected"]
